# ISUEE-Sem-2-Informatyka-i-podstawy-programowania

./: CMakeLists.txt  README.md
src/exercises/files/: main.cpp
src/exercises/inheritance/: main.cpp
src/exercises/klasy/: main.cpp
src/t1_files/: CMakeLists.txt  main.cpp
src/test/files/: main.cpp
